# LAProof

./: .gitignore  .gitmodules  .mailmap  CoqMakefile.local  How-to-document.md  LICENSE  Makefile  Makefile.coq.conf  Makefile.coq.local  README.md  _CoqProject  _CoqProject.C  _CoqProject.acc  _CoqProject.laproof  _CoqProject.make  _CoqProject.verif  bib.bib  common.mk  conclusion.tex  conference_101719.tex  coq-laproof.opam  floatlib.v  floatlib.v.crashcoqide  header.html  index.html  introduction.tex  lib.tex  lstlangcoq.sty  main.aux  main.bbl  main.blg  main.dvi  main.out  main.tex  models.tex  relatedwork.tex  sparse.tex
.github/workflows/: coq.yml
C/: Makefile  VSU_densemat.v  VSU_sparse.v  _CoqProject.make  cholesky.v  densemat_lemmas.v  distinct.v  floatlib.v  matrix_model.v  partial_csr.v  partial_csrg.v  sparse_model.v  spec_alloc.v  spec_bandmat.v  spec_build_csr2.v  spec_densemat.v  spec_sparse.v  spec_sparse_client.v  verif_alloc.v  verif_build_csr.v  verif_build_csr2.v  verif_cholesky.v  verif_densemat.v  verif_densemat_cholesky.v  verif_densemat_mult.v  verif_sparse.v  verif_sparse_byrows.v  verif_sparse_client.v
C/cblas/: README.md  asum_model.v  dasum.v  ddot.v  ddot_model.v  dscal.v  scal_model.v  spec_dasum.v  spec_ddot.v  spec_dscal.v  stride_model.v  verif_dasum.v  verif_ddot.v  verif_dscal.v
C/include/: alloc.h  bandmat.h  build_csr2.h  densemat.h  sparse.h
C/src/: alloc.c  bandmat.c  build_csr.c  build_csr2.c  cholesky.c  densemat.c  sparse.c  (+1 more)
accuracy_proofs/: common.v  dot_acc.v  dot_acc.v.crashcoqide  dot_acc_lemmas.v  dotprod_model.v  export.v  fcmsumxy.v  float_acc_lems.v  float_tactics.v  fma_dot_acc.v  fma_is_finite.v  functional_models.v  gem_defs.v  gemm_acc.v  gemv_acc.v  libvalidsdp.v  list_lemmas.v  matrix_module.v  mc_extra2.v  mv_mathcomp.v  mv_mathcomp.v.crashcoqide  op_defs.v  preamble.v  real_lemmas.v  solve_model.v  sum_acc.v  sum_is_finite.v  sum_model.v  vec_op_acc.v  vecnorm_acc.v
cdoc/: ldoc.lua
docs/: LAProof.C.VSU_densemat.html  LAProof.C.VSU_sparse.html  LAProof.C.alloc.html  LAProof.C.bandmat.html  LAProof.C.build_csr.html  LAProof.C.cblas.asum_model.html  LAProof.C.cblas.dasum.html  LAProof.C.cblas.ddot.html  LAProof.C.cblas.ddot_model.html  LAProof.C.cblas.dscal.html  LAProof.C.cblas.scal_model.html  LAProof.C.cblas.spec_dasum.html  LAProof.C.cblas.spec_ddot.html  LAProof.C.cblas.spec_dscal.html  LAProof.C.cblas.stride_model.html  LAProof.C.cblas.verif_dasum.html  LAProof.C.cblas.verif_ddot.html  LAProof.C.cblas.verif_dscal.html  LAProof.C.cholesky.html  LAProof.C.densemat.html  LAProof.C.densemat_lemmas.html  LAProof.C.distinct.html  LAProof.C.floatlib.html  LAProof.C.matrix_model.html  LAProof.C.partial_csr.html  LAProof.C.sparse.html  LAProof.C.sparse_model.html  LAProof.C.spec_alloc.html  LAProof.C.spec_densemat.html  LAProof.C.spec_sparse.html  LAProof.C.verif_alloc.html  LAProof.C.verif_build_csr.html  LAProof.C.verif_cholesky.html  LAProof.C.verif_densemat.html  LAProof.C.verif_densemat_cholesky.html  LAProof.C.verif_densemat_mult.html  LAProof.C.verif_sparse.html  LAProof.C.verif_sparse_byrows.html  LAProof.accuracy_proofs.common.html  LAProof.accuracy_proofs.dot_acc.html  (+30 more)
html/: index.html
mathcomp-compat/: CommonSSR.v
mathcomp_compat/: #CommonSSR.v#  CommonSSR.v
real/: cholesky.v  cholesky_jik.v
sparse/: sparse.c  sparse.h  sparse_model.v  spec_sparse.v  verif_sparse.v  verif_sparse_byrows.v
(+7 files in other folders)
